tests/fsharp/typecheck/sigs/neg130.4.7.bsl

neg130.fs(15,31,15,35): typecheck error FS0043: No overloads match for method 'Method'.

Known return type: int

Known type parameter: <  ^t >

Available overloads:
 - static member X.Method : a:int -> int // Argument 'a' doesn't match
 - static member X.Method : a:int64 -> int // Argument 'a' doesn't match

neg130.fs(17,8,17,13): typecheck error FS0039: The value or constructor 'Test2' is not defined. Maybe you want one of the following:
   Test
   Text
